Friday 9/09/16:
	@ 5:00pm:
		- The Makefile from agent2D team was modified to include the flags of the ML library.
		  You have to add `pkg-config --cflags opencv` to the CPPFLAGS variable and `pkg-config --libs opencv` to the LIBS variable.
		- Created the function extractFeatures in bhv_chain_action.cpp.
Tuesday 6/09/16:
	@ 12:00pm:
		- Created comportamientos.txt. Added some info about how the behaviors works.

Monday 5/09/16:
	@ 8:00pm:
		- Commented the function Bhv_SetPlayKickIn::execute in bhv_set_play_kick_in.cpp

Thursday 12/05/16:
	@ 8:00pm:
		- Created a coach message. (hello. can you hear me?)
		- Added the function SampleCoach::sayHello() to the sample_coach.cpp agent2d file.
		- Modified the FreeformParser::parse() in freeform_parser.cpp.

Sunday 08/05/16:
	@ 8:00pm:
		- Added info in coachManual.txt about how the message processing works.

Saturday 07/05/16:
	@ 7:00pm:
		- Added info in coachManual.txt about functions related to coach messages.

Tuesday 03/05/16:
	@ 5:00pm:
		-Added info about the parsers.

Saturday 30/04/16:
	@ 9:00pm:
		-Added other things to coachManual.txt

Thursday 28/04/16 :
	@ 5:00pm :
		- Commented the function SampleCoach::doSubstituteTiredPlayers in sample_coach.cpp.
		- Commented part of the function main() in main_coach.cpp.

Tuesday 26/04/16 :
	@ 9:00pm :
		- Finished commenting the function Bhv_BasicOffensiveKick::execute in bhv_basic_offensive_kick.cpp.
		- Commented the function SampleCoach::doFirstSubstitute in sample_coach.cpp.

Saturday 23/04/16:
	@ 11:00pm:
		- Commented the function Strategy::exchangeRole in strategy.cpp
		- Created coachManual.txt
		- Commented the functions SampleCoach::doSubstitute, SampleCoach::substituteTo, SampleCoach::getFastestType,
			SampleCoach::sayPlayerTypes in sample_coach.cpp

Friday   22/04/16 :
	@ 6:00pm :
		- Commented the function Bhv_BasicMove::execute in bhv_basic_move.cpp.
		- Commented part of the function Bhv_BasicOffensiveKick::execute in bhv_basic_offensive_kick.cpp.
